syntax = "proto3";
package dynamic.calls.Executors;
option csharp_namespace = "DynamicCallsClient";

message ExecutionRequest {
    string jarLocation = 1;
    string className = 2;
    string methodName = 3;
    string data = 4;
}

message ExecutionResponse {
    string error = 1;
    string data = 2;
}

service ExecutionService {
    rpc execute(ExecutionRequest) returns (ExecutionResponse);
}
